# EPScan

./: .gitignore  README.md  ep_scan.py  pyproject.toml
analyse/k8s/: basic.py  workload.py
analyse/k8s/rbac/: __init__.py  permission.py
analyse/k8s/rbac/data/: all_perm.csv
analyse/security/: base.py
analyse/source/: codeql.py
analyse/source/queries/: .gitignore  all_sdk_calls.ql  api_calls.ql  candidate_api_calls.ql  codeql-pack.lock.yml  codeql-pack.yml  entrypoints.ql  reachable_api_calls.ql
analyse/source/queries/analyse/: Function.qll  GlobalVar.qll  Package.qll  RefGraph.qll
analyse/source/queries/k8sapi/: Candidate.qll  General.qll
modules/: config_analyse.py  ignore.py  source_analyse.py  source_download.py  storage.py  types.py
modules/perm_compare/: __init__.py  permission.py
modules/pod_source_match/: __init__.py  executable_extractor.py  info.py  prompt_template.yaml  rules.py
modules/special_rules/: bad_image.txt  ignore_containers.csv
tests/: __init__.py  test_e2e.py
tests/analyse/k8s/: test_rbac.py  test_workload.py
tests/modules/: test_config_analyse.py  test_perm_compare.py
tests/modules/pod_source_match/: test_executable_extractor.py  test_pod_source_match.py  test_rules.py
tests/resources/config_analyse/any_match/: service-account.yaml
tests/resources/images/: registry-1.docker.io_nginx_latest.json
tests/resources/single_objs/: gatekeeper.yaml  kyverno.yaml  psp.yaml  test_container.yaml
tests/utils/: test_docker_image.py
utils/: .gitignore  binary_utils.py  csv_utils.py  docker_image.py  log.py  openai_helper.py
(+22 files in other folders)
